ToDo / Roadmap
 - Add ability to scale resulting images after cropping
 - Filter to fix image color / convert to black & white...
   o add filter for color manipulation_/adjustment
   o point to white pixel (or many white pixels)
 - BUG: png images can't export to jpg!
 - png images do not scale well
 - handle empty images (placeholder) differently
 - Load images for Icons in background
 - Implement disable filter
   o Set image size, use it in pdf export.
   o disabling a filter (UI) should disable the rendering.
 - progress dialog while exporting / loading
 - Display page preview instead of original image in image list
 - drag and drop in the image list
 - error message on console: kfilemodule(5761)/kio (KDirModel)
   KDirModelPrivate::_k_slotDeleteItems: No node found for item that was just
   removed: KUrl("file:(((...")
 - windows port: security credentials (producer...)
 - add a placeholder at the end of the imagetablewidget, so that can insert an image at the end and
   insert an image on the right when there is no image in the list.
 - Application Icon for YASW
 - autocalibration with a printed grid (line detection)
   o have a look at ppmunwarp http://diybookscanner.org/forum/viewtopic.php?f=19&t=2589
 - move image from left ro right
 - centralized .h header with includes and default values.
 - QPixmap::scaled: Pixmap is a null pixmap while loading
User requests:
 - Add the ability to take a checkerboard pattern as input to the de-warping stage.
 - A way to measure DPI in-situ. Allow the user to draw a line on the pic and inform yasw that the
   actual physical length of this line is x. You could then compute DPI by measuring the length of
   the drawn line in pixels and divide by length input.
   o I assume you would calculate DPI on the cropped image. In that case, use the DPI to also
     calculate and display the physical dimensions of the page or a sub-set of the page as selected
     by a user-defined bounding box.