@@ -14,19 +14,6 @@
    <string>Form</string>
   </property>
   <layout class="QGridLayout" name="gridLayout_2">
-   <item row="0" column="2">
-    <spacer name="horizontalSpacer">
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>216</width>
-       <height>20</height>
-      </size>
-     </property>
-    </spacer>
-   </item>
    <item row="0" column="0">
     <widget class="QCheckBox" name="enable">
      <property name="text">
@@ -46,6 +33,22 @@
       <bool>false</bool>
      </property>
     </widget>
+   </item>
+   <item row="0" column="2">
+    <spacer name="horizontalSpacer">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>216</width>
+       <height>20</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item row="1" column="0" rowspan="2" colspan="3">
+    <widget class="BaseFilterGraphicsView" name="view"/>
    </item>
    <item row="1" column="3">
     <layout class="QGridLayout" name="gridLayout">
@@ -76,33 +79,13 @@
       </widget>
      </item>
      <item row="1" column="0">
-      <widget class="QLabel" name="labelWidth">
-       <property name="text">
-        <string>Width:</string>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="1">
-      <widget class="QLineEdit" name="imageWidth"/>
-     </item>
-     <item row="2" column="0">
-      <widget class="QLabel" name="labelHeight">
-       <property name="text">
-        <string>Height:</string>
-       </property>
-      </widget>
-     </item>
-     <item row="2" column="1">
-      <widget class="QLineEdit" name="imageHeight"/>
-     </item>
-     <item row="3" column="0">
       <widget class="QLabel" name="labelDPI">
        <property name="text">
         <string>DPI:</string>
        </property>
       </widget>
      </item>
-     <item row="3" column="1">
+     <item row="1" column="1">
       <widget class="QComboBox" name="dpi">
        <property name="editable">
         <bool>true</bool>
@@ -124,10 +107,33 @@
        </item>
       </widget>
      </item>
+     <item row="2" column="0">
+      <widget class="QLabel" name="labelWidth">
+       <property name="text">
+        <string>Width:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="1">
+      <widget class="QLineEdit" name="imageWidth"/>
+     </item>
+     <item row="3" column="1">
+      <widget class="QLabel" name="calculatedWidth"/>
+     </item>
+     <item row="4" column="0">
+      <widget class="QLabel" name="labelHeight">
+       <property name="text">
+        <string>Height:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="4" column="1">
+      <widget class="QLineEdit" name="imageHeight"/>
+     </item>
+     <item row="5" column="1">
+      <widget class="QLabel" name="calculatedHeight"/>
+     </item>
     </layout>
-   </item>
-   <item row="1" column="0" rowspan="3" colspan="3">
-    <widget class="BaseFilterGraphicsView" name="view"/>
    </item>
    <item row="2" column="3">
     <spacer name="verticalSpacer">
@@ -160,8 +166,8 @@
    <slot>slotPropertyChanged()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>524</x>
-     <y>73</y>
+     <x>579</x>
+     <y>109</y>
     </hint>
     <hint type="destinationlabel">
      <x>440</x>
@@ -176,12 +182,28 @@
    <slot>slotPropertyChanged()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>491</x>
-     <y>102</y>
+     <x>579</x>
+     <y>156</y>
     </hint>
     <hint type="destinationlabel">
      <x>453</x>
      <y>164</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>dpi</sender>
+   <signal>textChanged(QString)</signal>
+   <receiver>ScalingWidget</receiver>
+   <slot>slotPropertyChanged()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>510</x>
+     <y>69</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>521</x>
+     <y>207</y>
     </hint>
    </hints>
   </connection>
